syntax = "proto3";

import "Element.proto";
import "DataFrame.proto";

// A change to an element.
message Delta {
  // Each delta applies to a particular ID.
  uint32 id = 1;

  // There are two kinds of supported deltas.
  oneof type {
    Element new_element = 2;
    DataFrame add_rows = 3;
  }
}
